<resources>
    <string name="app_name">皓阅</string>
    <string name="search_label">皓阅·搜索</string>
    <string name="last_read">最后阅读</string>
    <string name="read_summary">让阅读成为一种习惯</string>
    <string name="update_log">更新日志</string>
    <string name="action_search">搜索</string>
    <string name="action_download">下载任务</string>
    <string name="action_list">列表视图</string>
    <string name="action_grid">网格视图</string>
    <string name="action_list_grid">列表/网格</string>
    <string name="book_library">书城</string>
    <string name="book_local">添加本地</string>
    <string name="book_source_manage">书源管理</string>
    <string name="book_all_source">全部</string>
    <string name="book_inner_source">内置书源</string>
    <string name="book_outer_source">外置书源</string>
    <string name="book_inner_source_716">My716</string>
	<string name="book_inner_source_sq">ShuQi</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="donate">捐赠</string>
    <string name="exit">退出</string>
    <string name="exit_no_save">还未保存,是否继续编辑</string>
    <string name="read_style">阅读样式设置</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="read_dur_progress">最近阅读: %s</string>
    <string name="play_dur_progress">最近播放: %s</string>
    <string name="tv_book_name">书籍名称</string>
    <string name="book_search_last">最新章节: %s</string>
    <string name="check_add_bookshelf">是否将《%s》放入书架？</string>
    <string name="import_books_count">共%s个Text文件</string>
    <string name="is_loading">加载中…</string>
    <string name="retry">重试</string>
    <string name="download_offline">离线下载</string>
    <string name="change_origin">换源</string>
    <string name="cache_extract">提取</string>
    <string name="about_description">这是一款开源的阅读软件，你可以fork我们的代码自己编译APK。欢迎提交代码帮助改善应用。</string>
    <string name="version_name">Version %s</string>
    <string name="pt_auto_refresh">自动刷新</string>
    <string name="ps_auto_refresh">打开软件时自动更新书籍</string>
    <string name="pt_auto_clean_book">自动移除无效书籍</string>
    <string name="ps_auto_clean_book">清理本地已删除的书籍</string>
    <string name="pt_chapter_disk_cache">章节列表使用磁盘缓存</string>
    <string name="ps_chapter_disk_cache">开启将以文件形式缓存章节列表</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="backup_permission">备份请给与存储权限</string>
    <string name="restore_permission">恢复请给与存储权限</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="goto_select">去选择</string>
    <string name="tip_source_not_selected">您没有选择任何书源</string>
    <string name="backup_message">新备份会替换原有备份，备份文件夹YueDu，是否确认备份？</string>
    <string name="restore_message">备份书架会覆盖现有书架，是否确认恢复？</string>
    <string name="on_backup">正在备份</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_fail">备份失败</string>
    <string name="on_restore">正在恢复</string>
    <string name="restore_success">恢复成功</string>
    <string name="restore_fail">恢复失败</string>
    <string name="disclaimer">免责声明</string>
    <string name="all_chapter_num">共%d章</string>
    <string name="interface_setting">界面</string>
    <string name="brightness">亮度</string>
    <string name="table_of_contents">目录</string>
    <string name="next_chapter">下一章</string>
    <string name="previous_chapter">上一章</string>
    <string name="ps_hide_status_bar">阅读界面隐藏状态栏</string>
    <string name="pt_read_line_adjust">阅读行数调整</string>
    <string name="ps_read_line_adjust">阅读行数减一行,如阅读界面显示不全可启用</string>
    <string name="read_aloud">朗读</string>
    <string name="read_aloud_t">正在朗读</string>
    <string name="text_return">返回</string>
    <string name="refresh">刷新</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="set_timer">定时</string>
    <string name="read_aloud_pause">朗读暂停</string>
    <string name="read_aloud_timer">正在朗读(还剩%d分钟)</string>
    <string name="ps_hide_navigation_bar">阅读界面隐藏虚拟按键</string>
    <string name="pt_hide_navigation_bar">隐藏虚拟按键</string>
    <string name="git_hub">GitHub</string>
    <string name="scoring">评分</string>
    <string name="send_mail">发送邮件</string>
    <string name="can_not_open">无法打开</string>
    <string name="no_chapter">无章节</string>
    <string name="add_book_url">添加网址</string>
    <string name="background">背景</string>
    <string name="author">作者</string>
    <string name="author_unknown">未知</string>
    <string name="book_audio">[有声]</string>
    <string name="book_download">[下载]</string>
    <string name="analyze_error">站点暂时不支持解析，请反馈</string>
    <string name="aloud_stop">朗读停止</string>
    <string name="clear_content">清除缓存</string>
    <string name="action_save">保存</string>
    <string name="book_source">书源</string>
    <string name="edit_book_source">编辑书源</string>
    <string name="disable_book_source">禁用书源</string>
    <string name="add_book_source">新建书源</string>
    <string name="book_file_selector">添加书籍</string>
    <string name="scan_book_source">扫描</string>
    <string name="copy_source">拷贝书源</string>
    <string name="paste_source">粘贴书源</string>
    <string name="source_rule_s">书源规则说明</string>
    <string name="update_url">查看最新版本</string>
    <string name="camera_scan">扫描二维码</string>
    <string name="scan_image">扫描本地图片</string>
    <string name="rule_summary">规则说明</string>
    <string name="share">分享</string>
    <string name="flow_sys">跟随系统</string>
    <string name="add">添加</string>
    <string name="import_book_source">导入书源</string>
    <string name="import_book_source_local">本地导入</string>
    <string name="import_book_source_on_line">网络导入</string>
    <string name="replace_rule_title">替换净化</string>
    <string name="cache_manager">缓存提取</string>
    <string name="replace_rule_edit">替换规则编辑</string>
    <string name="replace_rule">替换规则</string>
    <string name="replace_to">替换为</string>
    <string name="img_cover">封面</string>
    <string name="book">书</string>
    <string name="volume_open_page">音量键翻页</string>
    <string name="click_open_page">点击翻页</string>
    <string name="click_all_next_page">点击总是翻下一页</string>
    <string name="open_page_anim">翻页动画</string>
    <string name="keep_light">屏幕超时</string>
    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="adjust">调节</string>
    <string name="scroll_bar">滚动条</string>
    <string name="qqq">讨论群:701903217</string>
    <string name="clear_all_content">清除缓存会删除所有已保存章节,是否确认删除?</string>
    <string name="book_source_share_url">书源共享</string>
    <string name="replace_rule_summary">替换规则描述</string>
    <string name="select_all">全选</string>
    <string name="night_theme">夜间模式</string>
    <string name="welcome">启动页</string>
    <string name="download_start">开始下载</string>
    <string name="download_cancel">取消下载</string>
    <string name="no_download">暂无任务</string>
    <string name="import_select_book">导入选择书籍</string>
    <string name="update_search_threads_num">搜索线程数</string>
    <string name="change_icon">切换图标</string>
    <string name="add_shelf">放入书架</string>
    <string name="remove_shelf">移出书架</string>
    <string name="start_read">开始阅读</string>
    <string name="start_listen">开始听书</string>
    <string name="data_loading">加载数据中…</string>
    <string name="open_from_other">打开外部书籍</string>
    <string name="origin">来源</string>
    <string name="import_replace_rule">本地导入</string>
    <string name="import_replace_rule_on_line">网络导入</string>
    <string name="bookshelf_px">书架排序</string>
    <string name="bookshelf_px_0">按阅读时间排序</string>
    <string name="bookshelf_px_1">按更新时间排序</string>
    <string name="bookshelf_px_2">手动排序</string>
    <string name="read_type">阅读方式</string>
    <string name="horizontal_page_turning">水平翻页</string>
    <string name="vertical_scroll">垂直滚动</string>
    <string name="del_select">删除所选</string>
    <string name="clear_font">默认字体</string>
    <string name="find_on_www">发现</string>
    <string name="find_source_manage">发现管理</string>
    <string name="find_empty">没有内容，去书源里自定义吧~</string>
    <string name="del_all">删除所有</string>
    <string name="searchHistory">搜索历史</string>
    <string name="searchBook">搜索书名、作者</string>
    <string name="searchShelfBook">搜索全部书架</string>
    <string name="clear">清除</string>
    <string name="refresh_default">书源同步</string>
    <string name="no_last_chapter">无最新章节信息</string>
    <string name="showTimeBattery">显示时间和电量</string>
    <string name="showTitle">显示正文标题</string>
    <string name="showBatteryNumber">显示电量数字</string>
    <string name="showLine">显示分隔线</string>
    <string name="darkStatusIcon">深色状态栏图标</string>
    <string name="content">内容</string>
    <string name="copy_text">拷贝内容</string>
    <string name="edit_charset">设置编码</string>
    <string name="content_sl">这是一段测试文字\n\u3000\u3000只是让你看看效果的</string>
    <string name="text_bg_style">文字颜色和背景(长按自定义)</string>
    <string name="immersion_status_bar">沉浸式状态栏</string>
    <string name="immersion_status_bar_s">状态栏透明</string>
    <string name="un_download">还剩%d章未下载</string>
    <string name="long_click_input_color">长按输入颜色值</string>
    <string name="s_bookshelf_anim">打开书架时显示动画</string>
    <string name="t_bookshelf_anim">书架动画</string>
    <string name="loading">加载中…</string>
    <string name="item_group_zg">追更</string>
    <string name="item_group_yf">养肥</string>
    <string name="item_group_wj">完结</string>
    <string name="item_group_bd">本地</string>
    <string name="item_group_ys">有声</string>
    <string name="item_group_mh">漫画</string>
    <string name="group_zg">追更</string>
    <string name="group_yf">养肥</string>
    <string name="group_wj">完结</string>
    <string name="bookmark">书签</string>
    <string name="local">本地</string>
    <string name="bookmark_add">添加书签</string>
    <string name="action_del">删除</string>
    <string name="action_open_chapter">前往</string>
    <string name="load_over_time">加载超时</string>
    <string name="qq_group">QQ讨论群:%s</string>
    <string name="copy_complete">已拷贝</string>
    <string name="delete_bookshelf_s">是否确认将这本书移出书架？</string>
    <string name="delete_bookshelf_not_exist_s">此书籍文件已被删除，是否将这本书移出书架？</string>
    <string name="clean_caches">清除缓存</string>
    <string name="clean_caches_s">这将会清空所有缓存，是否继续？</string>
    <string name="clean_book_cache_s">这将会清空本书缓存，是否继续？</string>
    <string name="clear_bookshelf">清空书架</string>
    <string name="refresh_bookshelf">更新书架</string>
    <string name="clear_bookshelf_s">这将会删除所有书籍，请谨慎操作。</string>
    <string name="search">搜索</string>
    <string name="search_book">搜书</string>
    <string name="search_book_source">搜索书源</string>
    <string name="search_book_source_num">搜索(共%d个书源)</string>
    <string name="chapter_list_size">目录(%d)</string>
    <string name="text_bold">加粗</string>
    <string name="custom_font">字体</string>
    <string name="text">文字</string>
    <string name="font_larger">A+</string>
    <string name="font_smaller">A-</string>
    <string name="home_page">软件主页</string>
    <string name="padding_top">上边距</string>
    <string name="padding_bottom">下边距</string>
    <string name="check_book_source">校验书源</string>
    <string name="jf_convert">简繁转换</string>
    <string name="book_info">书籍信息</string>
    <string name="menu_action_group">分组</string>
    <string name="aloud_volume_page">朗读时音量键翻页</string>
    <string name="sort">书源排序</string>
    <string name="sort_auto">智能排序</string>
    <string name="sort_manual">手动排序</string>
    <string name="sort_ping_yin">拼音排序</string>
    <string name="sort_by_name_asc">按名称(升序)</string>
    <string name="sort_by_name_desc">按名称(倒序)</string>
    <string name="sort_by_date_asc">按时间(升序)</string>
    <string name="sort_by_size_asc">按大小(升序)</string>
    <string name="sort_by_date_desc">按时间(倒序)</string>
    <string name="sort_by_size_desc">按大小(倒序)</string>
    <string name="audio_book">有声小说</string>
    <string name="open_url">打开网址</string>
    <string name="source_debug">调试书源</string>
</resources>