<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.BookSourceActivity">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_black_24dp"
        android:title="@string/select_all"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_add_book_source"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/add_book_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_book_source_local"
        android:icon="@drawable/ic_folder_open_black_24dp"
        android:title="@string/import_book_source_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_book_source_onLine"
        android:icon="@drawable/ic_link_black_24dp"
        android:title="@string/import_book_source_on_line"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_del_select"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:title="@string/del_select"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_book_source"
        android:icon="@drawable/ic_network_check_black_24dp"
        android:title="@string/check_book_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_group"
        android:icon="@drawable/ic_subject_black_24dp"
        android:title="@string/menu_action_group"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction">

        <menu>
            <group android:id="@+id/source_group">

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_format_line_spacing_black_24dp"
        android:title="@string/sort"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_manual"
                    android:title="@string/sort_manual" />

                <item
                    android:id="@+id/sort_auto"
                    android:title="@string/sort_auto" />

                <item
                    android:id="@+id/sort_ping_yin"
                    android:title="@string/sort_ping_yin" />

            </group>

        </menu>

    </item>
</menu>
