<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_library"
        android:icon="@drawable/ic_track_changes_black_24dp"
        android:title="@string/find_on_www"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_audio"
        android:icon="@drawable/ic_audio_book_black_24dp"
        android:title="@string/audio_book"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_local"
        android:icon="@drawable/ic_folder_open_black_24dp"
        android:title="@string/book_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_url"
        android:icon="@drawable/ic_link_black_24dp"
        android:title="@string/add_book_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_grid"
        android:icon="@drawable/ic_view_grid_black_24dp"
        android:title="@string/action_list_grid"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clearCaches"
        android:icon="@drawable/ic_clean_cache_black_24dp"
        android:title="@string/clean_caches"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clearBookshelf"
        android:icon="@drawable/ic_clear_all_black_24dp"
        android:title="@string/clear_bookshelf"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_refreshBookshelf"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh_bookshelf"
        app:showAsAction="never" />
</menu>
