<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_black_24dp"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_sort_name_asc"
            android:checked="true"
            android:title="@string/sort_by_name_asc"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_sort_name_desc"
            android:title="@string/sort_by_name_desc"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_sort_date_asc"
            android:title="@string/sort_by_date_asc"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_sort_date_desc"
            android:title="@string/sort_by_date_desc"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_sort_length_asc"
            android:title="@string/sort_by_size_asc"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_sort_length_desc"
            android:title="@string/sort_by_size_desc"
            app:showAsAction="never" />

    </group>

</menu>