<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_copy_source"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/copy_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste_source"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/paste_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_qr_code_camera"
        android:icon="@drawable/ic_qr_scan_black_24dp"
        android:title="@string/camera_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_launch_black_24dp"
        android:title="@string/open_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:icon="@drawable/ic_developer_board_black_24dp"
        android:title="@string/source_debug"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_it"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="never" />
</menu>