<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <group android:id="@+id/menuOnLine">
        <item
            android:id="@+id/action_change_source"
            android:icon="@drawable/ic_exchange_black_24dp"
            android:title="@string/change_origin"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/refresh"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_download"
            android:icon="@drawable/ic_download_black_24dp"
            android:title="@string/download_offline"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/disable_book_source"
            android:icon="@drawable/ic_forbid_black_24dp"
            android:title="@string/disable_book_source"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/edit_charset"
        android:enabled="false"
        android:icon="@drawable/ic_translate_black_24dp"
        android:title="@string/edit_charset"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_bookmark"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/bookmark_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy_text"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/copy_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_book_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/book_info"
        app:showAsAction="never" />
</menu>
