<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_book_source_manage"
        android:icon="@drawable/ic_source_manager_black_24dp"
        android:title="@string/book_source_manage" />


    <item
        android:icon="@drawable/ic_source_manager_black_24dp"
        android:title="@string/book_inner_source">
        <menu>

            <item
                android:id="@+id/action_book_my716"
                android:checkable="true"
                android:title="@string/book_inner_source_716"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_book_shuqi"
                android:checkable="true"
                android:title="@string/book_inner_source_sq"
                app:showAsAction="never" />
        </menu>
    </item>


    <item
        android:id="@+id/action_outer_source"
        android:icon="@drawable/ic_source_manager_black_24dp"
        android:title="@string/book_outer_source"
        >
        <menu>
            <group
                android:id="@+id/book_source_group"
                android:checkableBehavior="single">


            </group>
        </menu>
    </item>

</menu>
