<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_root"
    style="@style/AppTheme.CardView.Background"
    android:layout_width="@dimen/modialog_width"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/tv_text_default"
            android:text="@string/bookmark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvChapterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="10dp"
            android:text="@string/bookmark"
            android:textSize="14sp"
            android:textColor="@color/tv_text_default"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:padding="7dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_text_default"
                android:textSize="16sp"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_book_detail_read_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/llEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_book_detail_read_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/action_save"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_del"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/selector_book_detail_read_bg"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/action_del"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>